--- a/index.html
+++ b/index.html
@@ -1,48 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<title>TOTP Generator with Copy Button</title>
-<style>
-  body { font-family: monospace; padding: 30px; background: #f5f5f5; text-align: center; }
-  input { font-size: 1.2em; padding: 10px; width: 350px; margin: 10px 0; }
-  #codeContainer {
-    margin-top: 20px;
-    font-size: 4em;
-    letter-spacing: 10px;
-    display: inline-flex;
-    align-items: center;
-    gap: 10px;
-  }
-  #code { user-select: all; }
-  button.copyBtn {
-    font-size: 0.5em;
-    padding: 8px 12px;
-    cursor: pointer;
-    border: 1px solid #999;
-    border-radius: 4px;
-    background: #eee;
-    transition: background 0.2s ease;
-  }
-  button.copyBtn:hover {
-    background: #ddd;
-  }
-  #timer {
-    font-size: 1.5em;
-    color: #666;
-    margin-top: 10px;
-  }
-  #copiedMessage {
-    font-size: 0.8em;
-    color: green;
-    margin-left: 10px;
-    opacity: 0;
-    transition: opacity 0.3s ease;
-  }
-  #copiedMessage.visible {
-    opacity: 1;
-  }
-</style>
+  <meta charset="UTF-8" />
+  <title>TOTP Generator with Copy Button</title>
+  <style>
+    body { font-family: monospace; padding: 30px; background: #f5f5f5; text-align: center; }
+    input { font-size: 1.2em; padding: 10px; width: 350px; margin: 10px 0; }
+    #codeContainer {
+      margin-top: 20px;
+      font-size: 4em;
+      letter-spacing: 10px;
+      display: inline-flex;
+      align-items: center;
+      gap: 10px;
+    }
+    #code { user-select: all; }
+    button.copyBtn {
+      font-size: 0.5em;
+      padding: 8px 12px;
+      cursor: pointer;
+      border: 1px solid #999;
+      border-radius: 4px;
+      background: #eee;
+      transition: background 0.2s ease;
+    }
+    button.copyBtn:hover {
+      background: #ddd;
+    }
+    #timer {
+      font-size: 1.5em;
+      color: #666;
+      margin-top: 10px;
+    }
+    #copiedMessage {
+      font-size: 0.8em;
+      color: green;
+      margin-left: 10px;
+      opacity: 0;
+      transition: opacity 0.3s ease;
+    }
+    #copiedMessage.visible {
+      opacity: 1;
+    }
+  </style>
 </head>
 <body>
 
@@ -66,7 +66,7 @@ function base32tohex(base32) {
   base32 = base32.toUpperCase().replace(/=+$/, "").replace(/ /g, "");
   for (let i = 0; i < base32.length; i++) {
     const val = base32chars.indexOf(base32.charAt(i));
-    if (val === -1) return null; // invalid character
+    if (val === -1) return null;
     bits += val.toString(2).padStart(5, '0');
   }
   for (let i = 0; i + 4 <= bits.length; i += 4) {
@@ -143,7 +143,6 @@ function startAutoRefresh() {
   async function updateCode() {
     const otp = await generateTOTP();
     copiedMessage.classList.remove("visible");
-    // store current otp to use for copying
     copyBtn.dataset.currentCode = otp;
   }
 
@@ -165,6 +164,25 @@ window.onload = () => {
   document.getElementById("secret").value = secret;
   startAutoRefresh();
 };
+</script>
+
+<!-- Firebase Config and SDK (Step 4) -->
+<script type="module">
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/12.0.0/firebase-app.js";
+  import { getAnalytics } from "https://www.gstatic.com/firebasejs/12.0.0/firebase-analytics.js";
+
+  const firebaseConfig = {
+    apiKey: "AIzaSyAbHZGLZc3oCVwkca8t--bHSpfpVTAb5eE",
+    authDomain: "totemic-effect-466313-u5.firebaseapp.com",
+    projectId: "totemic-effect-466313-u5",
+    storageBucket: "totemic-effect-466313-u5.firebasestorage.app",
+    messagingSenderId: "443996634107",
+    appId: "1:443996634107:web:862757cd41e7ba6e48a95e",
+    measurementId: "G-TX1TBM01Z6"
+  };
+
+  const app = initializeApp(firebaseConfig);
+  const analytics = getAnalytics(app);
 </script>
 
 </body>
